# channel

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  Makefile.gnu  Makefile.intel  README.md  README_myfirstsim.md  Velocity_cut.cpp  __init__.py  channel.f90  convenience.py  dns.in  dnsdata.f90  driver.f90  ffts.f90  header.h  linsolve_blocking.inc  linsolve_nonblocking.inc  mpi_transpose.f90  out2vtk.f90  rbmat.f90  rbparmat.f90  rbparmat_blocking.f90  rbparmat_nonblocking.f90  runtime.f90  submit.sh  test_regression.f90  test_regression_scalar.f90  typedef.f90
body_forces/: am_f1.inc  am_pardec.inc  coriolis.inc
body_forces/am_butterfly/: am_butterfly.inc
body_forces/am_f1/: am_f1.inc
body_forces/am_f2/: am_f2.inc  am_pardec.inc
body_forces/coriolis/: coriolis.in  coriolis.inc  coriolis_pardec.inc
cmake/: FindFFTW.cmake
cpl-interface/: cpl2f90.cpl  cpl2fort.cpl  dnsdata.cpl  f902cpl.cpl  fld2vtk.cpl  post.cpl  rbmatmod.cpl
matlab-interface/: main_fort.m  postpro_secondary_flow.m  read_convvel.m  set_ibm.m
matlab-interface/base/: compute_derivatives.m  fftfit.m  init_dns.m  open_binary.m  plane_ift.m
out_exporter/: out2bin.f90  out2staggered.f90  out2vtk.f90  xz_resize.f90
postpro/: convenience.cpl  cpl2f90.cpl  dnsdata.cpl  dnsdirect.cpl  fld2vtk.cpl  poisson.cpl
postpro/am/: camstar.cpl  camstar.f90  camstar.in
postpro/conditional/: Statistics.py  Velocity_neg_pos.txt  Velocity_pos_neg.txt  cut_velocity.cpp  zero_crossings.cpp
postpro/conditional_fields/: conditional_ejection.f90  plot_cond_2d.ipynb
postpro/history/: mean_history.py  var_history.f90  var_history_2ascii.py
postpro/spectra/: Makefile  __init__.py  fake_psd.f90  plot_spectra.py  psd.cpl  psd.f90  read_psd.py  scriptra.py
postpro/tke/: Makefile  __init__.py  ebox.py  largesmall_def.cpl  largesmall_settings.in  plot_instant.py  prepare-pressure.cpl  read_uiuj.py  read_uiuj_spectra.m  uiuj.cpl  uiuj2ascii.cpl  uiuj2ascii_ow.cpl  uiuj_instant.sh  uiuj_largesmall.cpl  uiuj_largesmall.f90  uiuj_largesmall2ascii.cpl  uiuj_norolls.cpl  uiuj_ow.cpl  uiuj_spectra.cpl  uiuj_spectra.f90  uiuj_spectra2largesmall.py  uiuj_split.sh
prepro/: xz_resize.f90
runtime_plugin/instabudget/: aux.inc  finalise.inc  header.inc  save.inc  setup.inc
tests/data/: dns_test.in  dns_test_scalar.in  end_field.out  end_field_scalar.out  start_field.out  start_field_scalar.out
utilities/: brutecompare_bin.py  change_npy.pl  compare_fields.py  compress_uiuj_spectra.py  in_helper.py  is_there_nan.py  meanandvar.cpl  measure_performance.py  mismatches_time_check.py  missing_files_check.sh  plot_mean.py  print_header.f90  print_time.f90  resize.f90  shift_vel_field.py  size_extimator.f90  var_history.f90  var_history_plot.py
